[package]
name = "slippery"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", branch = "master", default-features = false, features = ["image", "canvas", "tokio", "wgpu", "wayland", "x11"] }
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["advanced"] }
iced_graphics = { git = "https://github.com/iced-rs/iced", branch = "master" }

# For fetching tiles
reqwest = "0.13.1"
reqwest-middleware = "0.5.0"
http-cache-reqwest = "0.16.0"

# Reqwest requires tokio anyway
tokio = { version = "1.48.0", features = ["time"] }

thiserror = "2.0.17"

log = "0.4.28"
env_logger = "0.11.8"

[dev-dependencies]
approx = "0.5.1"

