[package]
name = "slippery"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", default-features = false, features = ["image", "canvas", "tokio", "wgpu", "wayland", "x11"] }
iced_core = { git = "https://github.com/iced-rs/iced", features = ["advanced"] }
iced_graphics = { git = "https://github.com/iced-rs/iced" }

# For fetching tiles
reqwest = "0.13.4"
reqwest-middleware = "0.5.2"
http-cache-reqwest = "0.16.0"

# Reqwest requires tokio anyway
tokio = { version = "1.52.3", features = ["time"] }

thiserror = "2.0.18"

log = "0.4.33"
env_logger = "0.11.8"

[dev-dependencies]
approx = "0.5.1"
iced = { git = "https://github.com/iced-rs/iced", default-features = false, features = ["image", "canvas", "tokio", "wgpu", "wayland", "x11"] }
